--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,23 @@
     </div>
     <div class="content">
         <div class="create">
-
-        
+          <h2>Create Task</h2>
+          <form id="task">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title">
+            <label for="desc">Description</label>
+            <input type="text" id="desc" name="desc">
+            <label for="ddate">Due Date</label>
+            <input type="date" id="ddate" name="ddate">
+            <label for="check">Checklist</label>
+            <input type="text" id="check" name="check">
+            <label for="notes">Notes</label>
+            <input type="text" id="notes" name="notes">
+            <input type="submit" value="submit">
+          </form>
         </div>
         <div class="current">
-
+        <h2>Current Tasks</h2>
         </div>
     </div>
     <div class="footer">
