--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,25 @@
             <input type="text" id="desc" name="desc">
             <label for="ddate">Due Date</label>
             <input type="date" id="ddate" name="ddate">
-            <label for="check">Checklist</label>
-            <input type="text" id="check" name="check">
+            <p>Priority:</p>
+            <input type="radio" id="low" name="priority" value="low">
+            <label for="radio">Low</label>
+            <input type="radio" id="med" name="priority" value="med">
+            <label for="radio">Medium</label>
+            <input type="radio" id="high" name="priority" value="high">
+            <label for="radio">High</label>
             <label for="notes">Notes</label>
             <input type="text" id="notes" name="notes">
             <input type="submit" value="submit">
           </form>
         </div>
-        <div class="current">
-        <h2>Current Tasks</h2>
+        <div class="tasks">
+        <div class="currenttask">
+          <h2>Current Tasks</h2>
+        </div>
+        <div class="overdue">
+          <h2>Overdue Tasks</h2>
+        </div>
         </div>
     </div>
     <div class="footer">
